--- a/src/GitVersionExe/GitVersionExe.csproj
+++ b/src/GitVersionExe/GitVersionExe.csproj
@@ -168,6 +168,12 @@
     <Copy SourceFiles="$(SolutionDir)GitVersionTfsTask\task.json" DestinationFolder="$(BuildDir)GitVersionTfsTaskBuild" />
     <Copy SourceFiles="$(SolutionDir)GitVersionTfsTask\GitVersion.ps1" DestinationFolder="$(BuildDir)GitVersionTfsTaskBuild" />
     <Exec Command="powershell -ExecutionPolicy RemoteSigned -NoProfile &quot;$(SolutionDir)Update-GitVersionTfsTaskVersion.ps1 $(BuildDir)GitVersionTfsTaskBuild\task.json $(GitVersion_Major) $(GitVersion_Minor) $(GitVersion_Patch)&quot;" WorkingDirectory="$(BuildDir)" Condition="'$(GitVersion_SemVer)' != ''" />
+    <!-- TfsBuildExtension -->
+    <MakeDir Directories="$(BuildDir)GitVersionTfsExtensionBuild" />
+    <Copy SourceFiles="$(SolutionDir)GitVersionTfsExtension\extension-icon.png" DestinationFolder="$(BuildDir)GitVersionTfsExtensionBuild" />
+    <Copy SourceFiles="$(SolutionDir)GitVersionTfsExtension\vss-extension.json" DestinationFolder="$(BuildDir)GitVersionTfsExtensionBuild" />
+    <Copy SourceFiles="$(SolutionDir)GitVersionTfsExtension\extension-details.md" DestinationFolder="$(BuildDir)GitVersionTfsExtensionBuild" />
+    <Exec Command="powershell -ExecutionPolicy RemoteSigned -NoProfile &quot;$(SolutionDir)Update-GitVersionTfsExtensionVersion.ps1 $(BuildDir)GitVersionTfsExtensionBuild\vss-extension.json $(GitVersion_Major) $(GitVersion_Minor) $(GitVersion_Patch)&quot;" WorkingDirectory="$(BuildDir)" Condition="'$(GitVersion_SemVer)' != ''" />
     <!-- Gem -->
     <MakeDir Directories="$(BuildDir)GemBuild" />
     <Copy SourceFiles="@(amd64)" DestinationFolder="$(BuildDir)GemBuild\bin\NativeBinaries\amd64" />
