--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,9 @@ build_script:
   - cmd: 7z a "GitVersionTfsBuildTask_%GitVersion_NuGetVersion%.zip" -r .\build\GitVersionTfsTaskBuild\*.*
   - cmd: appveyor PushArtifact "GitVersionTfsBuildTask_%GitVersion_NuGetVersion%.zip"
 
+  - cmd: 7z a "GitVersionTfsBuildExtension_%GitVersion_NuGetVersion%.zip" -r .\build\GitVersionTfsExtensionBuild\*.*
+  - cmd: appveyor PushArtifact "GitVersionTfsBuildExtension_%GitVersion_NuGetVersion%.zip"
+
 test_script:
   - nunit-console "src\GitVersionTask.Tests\bin\%CONFIGURATION%\GitVersionTask.Tests.dll" "src\GitVersionExe.Tests\bin\%CONFIGURATION%\GitVersionExe.Tests.dll" "src\GitVersionCore.Tests\bin\%CONFIGURATION%\GitVersionCore.Tests.dll" /noshadow
 
